--- a/01_servlet/src/main/webapp/WEB-INF/web.xml
+++ b/01_servlet/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
-
-
   <display-name>01_servlet</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -31,5 +28,15 @@
   <servlet-mapping>
     <servlet-name>LifeCycle</servlet-name>
     <url-pattern>/cycle</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MyRequest</display-name>
+    <servlet-name>MyRequest</servlet-name>
+    <servlet-class>pkg02_request.MyRequest</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MyRequest</servlet-name>
+    <url-pattern>/request</url-pattern>
   </servlet-mapping>
 </web-app>
